# costprintpro

./: .editorconfig  .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER_SETUP.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  memory.md  progress.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-push.yml
apps/backend/: .dockerignore  Dockerfile
apps/backend/src/: config.rs  db.rs
apps/backend/src/db/: migration_simple.rs
apps/backend/src/entities/: jobs.rs  mod.rs  users.rs
apps/backend/src/handlers/: auth.rs  currency.rs  export.rs
apps/frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json
backend/: Cargo.toml
backend/src/: main.rs
backend/src/db/: migration.rs
backend/src/entities/: branding_settings.rs  cost_parameters.rs
backend/src/handlers/: costing.rs  jobs.rs  mod.rs  settings.rs
backend/src/models/: cost_parameters.rs  job.rs  mod.rs  user.rs
backend/src/services/: branding_service.rs  cost_parameters_service.rs  currency_service.rs  settings_service.rs
config/: .env.example
deploy/docker/: docker-compose.dev.yml  docker-compose.production.yml  docker-compose.services.yml  init.sql
docker/: .env.example  Dockerfile.backend  Dockerfile.backend.dev  Dockerfile.frontend  Dockerfile.frontend.dev  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  start.sh  test-page.html  validate.sh
docs/: FEATURES.md  README.md  architecture.md
frontend/: package.json
frontend/src/app/: page.tsx
frontend/src/components/: Dashboard.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  currency.ts
scripts/: build.sh
(+16 files in other folders)
