[package]
name = "costprint-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "bigdecimal", "uuid", "chrono"] }
bigdecimal = { version = "0.4", features = ["serde"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "with-rust_decimal"] }
sea-orm-migration = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Decimal arithmetic for precise calculations
rust_decimal = { version = "1.33", features = ["serde-float"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Redis for caching
redis = { version = "0.24", features = ["tokio-comp"] }

# PDF generation
printpdf = "0.6"

# Excel generation
rust_xlsxwriter = "0.64"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Environment variables
envy = "0.4"

# Lazy static initialization
once_cell = "1.19"
